[package]
name = "mq-6"
version = "0.1.0"
edition = "2024"

[dependencies]
embedded-hal = "0.2.7"

[dev-dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.5"
panic-semihosting = "0.5"
stm32f1xx-hal = { version = "0.9", features = ["stm32f103", "rt"] }
rtt-target = "0.3"

[features]
default = []
